# squonk2-train-test-split

./: Dockerfile  pyproject.toml
data/: drugs.smi
data-manager/: jobs.yaml
src/: train_test_split.py
