[tool.poetry]
name = "train-test-split"
version = "1.0.0"
description = "A GitHub Template Repository that you can use for Data Manager Job implementations."
authors = [
  "Alan Christie <achristie@informaticsmatters.com>",
  "Tim Dudgeon <tdudgeon@informaticsmatters.com>",
]
license = "MIT license"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.14"
im-data-manager-job-utilities = "^1"
# im-data-manager-job-utilities = "1.2.0"
# numpy = "^1.26"
numpy = "^2"
pandas = "^2.2"
scipy = "^1.11"
scikit-learn = "^1.4"
rdkit = "^2025.9.3"
setuptools = "^80.9.0"


[tool.poetry.group.dev.dependencies]
im-jote = "^0.11"
pre-commit = "^3"
pylint = "^4"
isort = "^7"
black = "^25"
mypy = "^1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
